--- a/css/style.scss
+++ b/css/style.scss
@@ -4,3 +4,10 @@
 @import 'global';
 @import 'navbar';
 @import 'homepage';
+@import 'about';
+@import 'howitworks';
+@import 'register';
+@import 'login';
+@import 'dashboard';
+@import 'dashboardNav';
+@import 'contact';
