--- a/css/_colors.scss
+++ b/css/_colors.scss
@@ -3,3 +3,5 @@ $heading-blue: #1E3D77;
 $text-color: #434344;
 $mobile-nav-bg: #4BB4E9;
 $twitter-blue: #2AA7E6;
+$form-color: #F5F5F5;
+$font-color: #434344;
