--- a/css/_global.scss
+++ b/css/_global.scss
@@ -1,8 +1,68 @@
 body{
     margin: 0;
     overflow-x: hidden;   
+    font-family: $avenir-light;
 }
 
 div{
     margin:  0;
 }
+
+.hide-desktop{
+    display: none;
+    @media screen and (max-width:768px) {
+        display:block ;
+    }
+}
+
+.hide-mobile{
+    display: none;
+    @media screen and (min-width:767px){
+        display: block;
+    }
+}
+
+.padding-lr0{
+    position: relative;
+    @media screen and(min-width:767px) {
+        padding-left: 0px !important;
+        padding-right: 0px !important;
+    }
+  
+}
+
+.padding-left0_{
+    position: relative;
+    @media screen and (min-width:767px) {
+        padding-left: 0px !important;
+    }
+    
+}
+
+.padding-right0_{
+    @media screen and(min-width:767px) {
+        padding-right: 0px !important; 
+    }
+    
+}
+
+.row_ {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .col_ {
+    flex: 1 0 18%; /* The important bit. This percentage decides your columns. 
+   The percent can be px. It just represents your minimum starting width.
+    */
+    margin: 5px;
+    background: tomato;
+    height: auto;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+
+  .owl-carousel .owl-item.big {background:#ac0000 !important;}
