--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -39,6 +39,17 @@
                 }
                
             }
+            .col-md-6{
+                &:nth-child(2){
+                    p{
+                        padding-bottom: 2em;
+
+                        &:nth-child(2){
+                            color: #FF0000;
+                        }
+                    }
+                }
+            }
         }
        
     }    
