--- a/css/style.css
+++ b/css/style.css
@@ -1551,4 +1551,12 @@ header.dashboard nav ul li ul li a {
   border-radius: 20px;
   padding: 1.4em;
 }
+
+.contact-us .contact-section .row .col-md-6:nth-child(2) p {
+  padding-bottom: 2em;
+}
+
+.contact-us .contact-section .row .col-md-6:nth-child(2) p:nth-child(2) {
+  color: #FF0000;
+}
 /*# sourceMappingURL=style.css.map */
