--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -18,28 +18,35 @@
             form{
                 .form-group{
                     input{
-                        border-radius: 20px;
-                        padding: 1.4em
+                        border-radius: 24px;
+                        padding: 1.7em
                     }
                     textarea{
                         width: 100%;
                         border-radius: 35px;
                     }
+                    button{
+                        background-color: #2AA7E6;
+                        border-radius: 20px;
+                        padding: 10px 20px;
+                    }
                 }
                 .form-inline{
-                    width: 49.5%;
+                    width: 49%;
                     display: inline-block;
                     margin:0.7em 0;
 
                     input{
                         width: 100%;
-                        border-radius: 20px;
-                        padding: 1.4em;
+                        border-radius: 24px;
+                        padding: 1.7em;
                     }
                 }
                
             }
             .col-md-6{
+                line-height: 2;
+                font-size: 16px;
                 &:nth-child(2){
                     p{
                         padding-bottom: 2em;
@@ -48,9 +55,62 @@
                             color: #FF0000;
                         }
                     }
+                    .sectwo{
+                        .phone-no{
+                            font-family: $avenir-black;
+                            font-weight: bolder;
+                            font-size: 18px;
+                           
+                            
+                        }
+                        .time{
+                            // margin: 1em 0;
+                           
+                            .time-open{
+                                font-family: $avenir-black;
+                                font-weight: bolder;
+                                font-size: 18px;
+                            }
+                        }
+                        .whatsapp{
+                            margin-top: 1.5em;
+                            .phone{
+                                display: inline-block;
+                                font-family: $avenir-black;
+                                font-weight: bolder;
+                                font-size: 18px;
+                            }
+                            .text{
+                                display: inline-block;
+                                padding-left: 15px;
+
+                            }
+                        }
+                    }
                 }
             }
         }
        
     }    
+}
+
+.office-section{
+    background-color: rgba($color: #2AA7E6, $alpha: 0.03);
+
+    h2{
+        font-family: $avenir-black;
+        font-weight: bolder;
+        color: $heading-blue;
+    }
+    h5{
+        font-family: $avenir-light;
+        font-size: 16px;
+        padding: 1.5em 0;
+        font-weight: lighter;
+    }
+    p{
+        font-family: $avenir-light;
+        min-height: 130px;
+        
+    }
 }
