--- a/css/_dashboard.scss
+++ b/css/_dashboard.scss
@@ -1,7 +1,7 @@
 .dashboard-content{
     padding-top: 150px;
     background-color: white;
-    height: 40vh;
+    height: 326px;
     box-shadow: 0 2px 22px rgba(0, 0, 0, 0.13);
 
     .row{
@@ -12,13 +12,89 @@
             color: $twitter-blue;
             font-weight: bolder;
             font-family: $avenir-black;
+
+            @media screen and (max-width:600px) {
+                font-size:18px;
+            }
         }
     }
+
+   
+ 
+}
+
+.dash{
+    position: relative;
+    // bottom: 650px;
+}
+.payment-images{
+    .hide-desktop{
+        position: relative;
+        bottom: 120px;
+    }
+    .purchase-coin{
+        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.36);
+        color: #808080;
+        background-color: white;
+        z-index:9999;
+        padding: 2rem 1rem 0rem 0rem;
+        border-radius: 30px;
+        .signature-wrapper{
+           
+            .coin-image {
+                display: inline-block;
+                img{
+                  width: 100%;
+                }
+              }
+              .rate-stats{
+                display: inline-block;
+                top: 10px;
+                padding-left: 10px;
+                position: relative;
+                img{
+                  width: 100%;
+                }
+                span{
+                  display: block;
+                  font-family: $comfortaa;
+                  font-weight: bolder;
+                  font-size: 10px;
+                  line-height: 2;
+                  
+                  span{
+                    padding-left: 40px;
+                    display: inline-block;
+                  }
+                }
+              }
+        
+              .rate-change{
+                display: inline-block;
+                position: relative;
+                top: 20px;
+                padding-left: 10px;
+                img{
+                  width: 40%;
+                  left: 40px;
+                  bottom: 20px;
+                  position: relative;
+                }
+                span{
+                  display: inline-block;
+                  font-weight: bolder;
+                  font-size: 18px;
+                  color: red
+                }
+              }
+        }
+        
+      }
 }
 
 .dashboard-rate{
     position: relative;
-    bottom: 170px;
+    bottom: 110px;
     background-color: #ffff;
 
 }
@@ -39,3 +115,109 @@
     }
 }
 
+.maindashboard-content{
+    background-color: #F9FDFF;
+   
+    .referral{
+        position: absolute;
+        color: white;
+        background-color: $twitter-blue;
+        position: absolute;
+        top: 300px;
+        left: 115px;
+    
+    }
+    .row{
+        img{
+            width: 100%;
+        }
+    }
+    .impressed{
+        font-family: $avenir-light;
+        font-size: 18px;
+        color: $twitter-blue;
+        padding:2em 0 2em 1em;
+    }
+
+    .testimony-form{
+        textarea{
+            border-radius: 40px;
+            width: 100%;
+            padding:2em;
+        }
+        button{
+            width: 100%;
+            text-align: center;
+            background-color: $twitter-blue;
+            color:white;
+            border-radius: 20px;
+            margin-right: 8%;
+            font-family: $avenir-light;
+            padding: 1em;
+
+
+        }
+    }
+}
+
+#dashboardBuy{
+    font-family: $avenir-light;
+    z-index: 99999;
+    ul{
+        li{
+            a{
+                padding-left: 2em;
+                padding-right: 2em;
+                
+            }
+            &:active{
+                background-color: $twitter-blue;
+            }
+        }
+    }
+    form{
+        .col-md-6{
+            input[type="radio"]{
+                display: inline-block;
+                position: relative;
+              
+            }
+            span{
+                display: inline-block;
+                position: relative;
+                margin-left: 20px;
+                bottom: 30px;
+
+                @media screen and (max-width:600px) {
+                    bottom:4px;
+                }
+            }
+        }
+        .sellForm{
+            input{
+                width: 100%;
+                margin-top: 1em;
+                padding: 0.5em 1em 0.5em 1.8em;
+                border-radius: 20px;
+                border: #808080 1px solid;
+             
+
+                &:focus{
+                    outline: none;
+                }
+            }
+            i{
+                position: absolute;
+                bottom: 12px;
+                left: 25px;
+            }
+            textarea{
+                width: 100%;
+                border-radius: 25px;
+                padding: 1em;
+                height: 119px;
+            }
+        }
+    }
+    
+}
