--- a/css/_dashboardNav.scss
+++ b/css/_dashboardNav.scss
@@ -5,7 +5,7 @@ header.dashboard{
     z-index: 99999;
   
     @media screen and (max-width:$breakpoint) {
-      
+     
     }
     
     background-color: #FFFFFF;
@@ -28,6 +28,15 @@ header.dashboard{
 
     nav {
         float: right;
+
+        ul.nav-dropdown{
+          z-index: 999;
+          background-color: white;
+
+          li{
+            border-bottom: 1px solid #707070;
+          }
+        }
         
         ul {
           list-style: none;
@@ -36,62 +45,25 @@ header.dashboard{
       
           @media screen and (max-width:760px) {
             background-color:white;
+
+            img{
+              width: 30%;
+            }
           }
           li {
             float: left;
             position: relative;
-            margin-left: 4px;
-            margin-right: 4px;
-      
-            &:nth-child(4){
-              @media screen and (min-width:768px){
-                text-align:center;
+            margin-left: 0px;
+            margin-right: 0px;
+
+            &:nth-child(6){
+              a.logout{
+                background-color: transparent !important;
+                text-align: left !important;
               }
-              a{
-                background-color: #16A2E8;
-                z-index: 99999;
-                border-radius: 15px;
-                padding:6px 20px;
-                color: #314D81 !important;
-                &:visited{
-                  color: $nav-font-color;
-                }
-                @media screen and (max-width:$breakpoint){
-                  text-align:center;
-                  width: 90%;
-                  margin-left: 2.5%;
-                  margin-bottom: 8px;
-                }
-              }
+             
             }
-            &:nth-child(5){
-                @media screen and (min-width:768px){
-                  text-align:center;
-                }
-                a{
-                  background-color: $nav-font-color;
-                  z-index: 99999;
-                  border-radius: 15px;
-                  padding:6px 20px;
-                  color: #16A2E8 ;
-      
-                  @media screen and (max-width:$breakpoint) {
-                    background-color:$heading-blue;
-                    color: white !important;
-                    width: 90%;
-                    text-align: center;
-                    margin-left: 2.5%;
-                    margin-bottom: 8px;
-                  }
-                  &:visited{
-                    color: #16A2E8 !important;
-                   
-                  }
-                  
-                }
-      
-              
-            }
+    
             a,
             a:visited {
               display: inline-block;
@@ -110,8 +82,12 @@ header.dashboard{
                 padding-left: 4px;
                 content: ' ▾';
               }
+             
               &:active{
                 border-bottom: 3px solid white;
+                @media screen and (max-width:768px){
+                  border: none !important;
+                }
               }
       
               @media screen and (max-width:$breakpoint) {
@@ -130,5 +106,122 @@ header.dashboard{
         }
       }
       
+      // Binds to JS Toggle
+.nav-mobile {
+  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background: none;
+  height: $nav-height;
+  width: $nav-height;
+}
+@media only screen and (max-width: 798px) {
+  // Hamburger nav visible on mobile only
+  .nav-mobile {
+    display: block;
+  }
+  nav {
+   width: 100%;
+    padding: $nav-height 0 0px 0;
+    max-height: 300px;
+    
+    
+    
+    ul.dash-navv {
+      display: none;
+      position: relative;
+      bottom: 140px;
+      padding-top: 20px;
+      padding-bottom: 25px;
+      box-shadow: 0 3px 11px rgba(0, 0, 0, 0.11);
+      li {
+        float: none;
+        a{
+          color: #1E3D77 !important;
+        }
+
+        &:nth-child(2){
+          background-color: rgba(129, 129, 129, 0.3);
+          margin:2px 0;
+        }
+        &:nth-child(3){
+          background-color: rgba(129, 129, 129, 0.3);
+          margin:2px 0;
+
+          ul.nav-dropdown{
+            border: none !important;
+            margin-top: 0px;
+            li{
+              background-color: white;
+            }
+          }
+        }
+        // background-color: $mobile-nav-bg;
+        
+        a {
+          color: #1E3D77 !important;
+          padding: 15px;
+          line-height: 20px;
+        }
+        ul li a {
+          padding-left: 30px;
+        }
+      }
+    }
+  }
+  .nav-dropdown {
+    position: static;
+  }
+}
+@media screen and (min-width: $breakpoint) {
+  .nav-list {
+    display: block !important;
+  }
+}
+#nav-toggle {
+  position: absolute;
+  left: 18px;
+  top: 22px;
+  cursor: pointer;
+  padding: 16px 37px 18px 6px;
+  border-radius: 3px;
+  border: 1px solid rgba(112, 112, 112, 0.3);
+  z-index: 9999;
+  span,
+  span:before,
+  span:after {
+    cursor: pointer;
+    border-radius: 1px;
+    height: 4px;
+    width: 33px;
+    background: $twitter-blue;
+    position: absolute;
+    display: block;
+    content: '';
+    // transition: all 300ms ease-in-out;
+  }
+  span:before {
+    top: -10px;
+  }
+  span:after {
+    bottom: -10px;
+  }
+  &.active span {
+    background-color: transparent;
+    &:before,
+    &:after {
+      top: 0;
+    }
+    &:before {
+      transform: rotate(45deg);
+    }
+    &:after {
+      transform: rotate(-45deg);
+    }
+  }
+}
+
+
     
   }
