--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -3,7 +3,7 @@ $content-width: 1000px;
 $breakpoint: 799px;
 $nav-height: 100px;
 $topNav-color: #0E295A;
-$nav-background: #2F4C6F;
+$nav-background: #1E3D77;
 $nav-font-color: #ffffff;
 $link-hover-color: #2581DC;
 
@@ -24,15 +24,15 @@ header{
     .float-right{
 
       img{
-        width: 20%;
+        width: 85%;
         padding: 5px;
 
         &:nth-child(2){
-          width: 30%;
+          width: 85%;
           padding: 5px;
         }
         &:nth-child(3){
-          width: 26%;
+          width: 85%;
           padding: 5px 0 5px 5px;
         }
       }
@@ -45,15 +45,28 @@ header{
       vertical-align: middle;
       display: inline-block;
       padding-top: 4px;
-      font-size: 8px;
-    }
-    img{
-      padding-left: 10px;
-      vertical-align: middle;
-      padding-top: 4px;
-      width: 4%;
+      font-size: 12px;
 
+      @media screen and (max-width:600px) {
+        font-size:7px;
+        padding-left: 3px;
+      }
+      img{
+        padding-left: 8px;
+        vertical-align: middle;
+        padding-top: 4px;
+        width: 85%;
+  
+        @media screen and (max-width:600px) {
+          width: 5%;
+          padding-left: 1px
+        }
+  
+      }
     }
+    
+    
+  
   }
 }
 // Outer navigation wrapper
@@ -82,6 +95,7 @@ header{
   line-height: $nav-height;
   text-transform: uppercase;
   font-size: 1.4em;
+  
 
   @media screen and (max-width:570px){
     //   padding: 0;
@@ -136,16 +150,65 @@ nav {
 
     @media screen and (max-width:760px) {
       background-color:white;
+      border-top: 7px solid $twitter-blue;
+      img{
+        position: relative;
+        width: 55%;
+        padding: 15px;
+        bottom: 24px;
+      }
     }
     li {
       float: left;
       position: relative;
-      margin-left: 4px;
       margin-right: 4px;
 
+      
+      
+
+      &:nth-child(2){
+        @media screen and (max-width:768px){
+          background-color: rgba(42, 167, 230, 0.1);
+
+          &:after{
+            display: block;
+            content: "";
+            border-bottom: 1px solid #fff;
+            width: 70%;
+            margin-left: 35px
+          }
+        }
+        
+      }
+      &:nth-child(3){
+        @media screen and (max-width:768px){
+          background-color: rgba(42, 167, 230, 0.1);
+          &:after{
+            display: block;
+            content: "";
+            border-bottom: 1px solid #fff;
+            width: 70%;
+            margin-left: 35px
+          }
+        }
+      }
       &:nth-child(4){
-        @media screen and (min-width:768px){
+        @media screen and (max-width:768px){
+          background-color: rgba(42, 167, 230, 0.1);
+          margin-bottom: 15px;
+          &:after{
+            display: block;
+            content: "";
+            border-bottom: 1px solid #fff;
+            width: 70%;
+            margin-left: 35px
+          }
+        }
+      }
+      &:nth-child(5){
+        @media screen and (max-width:768px){
           text-align:center;
+          
         }
         a{
           background-color: #16A2E8;
@@ -157,13 +220,13 @@ nav {
           }
           @media screen and (max-width:$breakpoint){
             text-align:center;
-            width: 90%;
-            margin-left: 2.5%;
+            width: 80%;
+            margin-right: 3.5%;
             margin-bottom: 8px;
           }
         }
       }
-      &:nth-child(5){
+      &:nth-child(6){
           @media screen and (min-width:768px){
             text-align:center;
           }
@@ -177,9 +240,9 @@ nav {
             @media screen and (max-width:$breakpoint) {
               background-color:$heading-blue;
               color: white !important;
-              width: 90%;
+              width: 80%;
               text-align: center;
-              margin-left: 2.5%;
+              margin-left: 7.5%;
               margin-bottom: 8px;
             }
             &:visited{
@@ -245,7 +308,7 @@ nav {
   position: absolute;
   top: 37px;
   right: 0;
-  background: $nav-background;
+  background: transparent;
   height: $nav-height;
   width: $nav-height;
 }
@@ -264,7 +327,8 @@ nav {
     ul {
       display: none;
       position: relative;
-      bottom: 70px;
+      bottom:178px;
+      padding-top: 50px;
       padding-bottom: 25px;
       box-shadow: 0 3px 11px rgba(0, 0, 0, 0.11);
       li {
@@ -273,7 +337,7 @@ nav {
         
         a {
           color: $nav-font-color !important;
-          padding: 15px;
+          padding: 15px 15px 15px 35px;
           line-height: 20px;
         }
         ul li a {
@@ -297,6 +361,7 @@ nav {
   top: 22px;
   cursor: pointer;
   padding: 10px 35px 16px 0px;
+  z-index: 9999;
   span,
   span:before,
   span:after {
@@ -304,7 +369,7 @@ nav {
     border-radius: 1px;
     height: 5px;
     width: 35px;
-    background: $nav-font-color;
+    background: white;
     position: absolute;
     display: block;
     content: '';
@@ -321,6 +386,7 @@ nav {
     &:before,
     &:after {
       top: 0;
+      background-color: $heading-blue;
     }
     &:before {
       transform: rotate(45deg);
@@ -330,4 +396,5 @@ nav {
     }
   }
 }
+
 
