--- a/css/_dashboard.scss
+++ b/css/_dashboard.scss
@@ -39,6 +39,10 @@
         z-index:9999;
         padding: 2rem 1rem 0rem 0rem;
         border-radius: 30px;
+
+        @media screen and (max-width:768px) {
+            padding: 2rem 1rem 3rem 0rem;
+        }
         .signature-wrapper{
            
             .coin-image {
