--- a/css/style.css
+++ b/css/style.css
@@ -631,7 +631,12 @@ nav ul li ul li a {
   nav ul li {
     float: none;
   }
-  nav ul li a {
+  nav ul li:nth-child(5) a {
+    color: #ffffff !important;
+    padding: 15px 15px 15px 35px;
+    line-height: 20px;
+  }
+  nav ul li:nth-child(6) a {
     color: #ffffff !important;
     padding: 15px 15px 15px 35px;
     line-height: 20px;
