--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -212,6 +212,7 @@ nav {
         }
         a{
           background-color: #16A2E8;
+          color: white;
           z-index: 99999;
           border-radius: 15px;
           padding:6px 20px;
@@ -223,6 +224,7 @@ nav {
             width: 80%;
             margin-right: 3.5%;
             margin-bottom: 8px;
+            color: white !important
           }
         }
       }
@@ -246,7 +248,7 @@ nav {
               margin-bottom: 8px;
             }
             &:visited{
-              color: #16A2E8 !important;
+              position: relative;
              
             }
             
@@ -261,11 +263,10 @@ nav {
         padding: 6px 20px;
         line-height: 1;
         vertical-align: middle;
-        color: $nav-font-color;
         text-decoration: none;
 
         @media screen and (max-width:768px) {
-          color: #1E3D77 !important
+          color: #1E3D77;
         }
         &:hover {
           color: $nav-font-color;
@@ -282,7 +283,7 @@ nav {
 
         @media screen and (max-width:$breakpoint) {
           text-align: center;
-          color: $heading-blue !important;
+          color: $heading-blue;
         }
       } // Dropdown list
       ul li {
@@ -338,23 +339,12 @@ nav {
       li {
         float: none;
         // background-color: $mobile-nav-bg;
-        &:nth-child(5){
-          a {
-            color: $nav-font-color !important;
-            padding: 15px 15px 15px 35px;
-            line-height: 20px;
-            
-          }
+        
+        a {
+          // color: $nav-font-color !important;
+          padding: 15px 15px 15px 35px;
+          line-height: 20px;
         }
-        &:nth-child(6){
-          a {
-            color: $nav-font-color !important;
-            padding: 15px 15px 15px 35px;
-            line-height: 20px;
-            
-          }
-        }
-       
         ul li a {
           padding-left: 30px;
         }
