--- a/css/style.css
+++ b/css/style.css
@@ -491,6 +491,7 @@ nav ul li {
 
 nav ul li:nth-child(5) a {
   background-color: #16A2E8;
+  color: white;
   z-index: 99999;
   border-radius: 15px;
   padding: 6px 20px;
@@ -506,6 +507,7 @@ nav ul li:nth-child(5) a:visited {
     width: 80%;
     margin-right: 3.5%;
     margin-bottom: 8px;
+    color: white !important;
   }
 }
 
@@ -535,7 +537,7 @@ nav ul li:nth-child(6) a {
 }
 
 nav ul li:nth-child(6) a:visited {
-  color: #16A2E8 !important;
+  position: relative;
 }
 
 nav ul li a,
@@ -545,14 +547,13 @@ nav ul li a:visited {
   padding: 6px 20px;
   line-height: 1;
   vertical-align: middle;
-  color: #ffffff;
   text-decoration: none;
 }
 
 @media screen and (max-width: 768px) {
   nav ul li a,
   nav ul li a:visited {
-    color: #1E3D77 !important;
+    color: #1E3D77;
   }
 }
 
@@ -578,7 +579,7 @@ nav ul li a:visited:active {
   nav ul li a,
   nav ul li a:visited {
     text-align: center;
-    color: #1E3D77 !important;
+    color: #1E3D77;
   }
 }
 
@@ -631,13 +632,7 @@ nav ul li ul li a {
   nav ul li {
     float: none;
   }
-  nav ul li:nth-child(5) a {
-    color: #ffffff !important;
-    padding: 15px 15px 15px 35px;
-    line-height: 20px;
-  }
-  nav ul li:nth-child(6) a {
-    color: #ffffff !important;
+  nav ul li a {
     padding: 15px 15px 15px 35px;
     line-height: 20px;
   }
