--- a/css/_register.scss
+++ b/css/_register.scss
@@ -52,6 +52,7 @@
                         padding: .75em;
                         border-radius: 25px;
                         background-image: linear-gradient(to right,#009CEA,  #1E3D77);
+                        color:white;
                     }
                     .tab{
                         .input-group-addon{
