--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -18,6 +18,7 @@ header{
   
   background-color: $topNav-color;
   .top-nav{
+    font-family: $avenir-roman !important;
     position: relative; 
     height: 37px;
     
@@ -249,6 +250,9 @@ nav {
             }
             &:visited{
               position: relative;
+              @media screen and (min-width:600px) {
+                color: $heading-blue;
+              }
              
             }
             
@@ -264,6 +268,7 @@ nav {
         line-height: 1;
         vertical-align: middle;
         text-decoration: none;
+        color: white;
 
         @media screen and (max-width:768px) {
           color: #1E3D77;
